<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ci Football Apps</string>
    <string name="title_detail">Match Detail</string>
    <string name="title_detail_team">Team Detail</string>
    <string name="title_detail_player">Player Detail</string>

    <string name="prev_match">Prev Match</string>
    <string name="next_match">Next Match</string>
    <string name="eng_premier">English Premier League</string>
    <string name="ger_bundes">German Bundesliga</string>
    <string name="ita_serie">Italian Serie A</string>
    <string name="fre_league">French Ligue 1</string>
    <string name="spa_league">Spanish La Liga</string>
    <string name="vs">VS</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="subtitutes">Subtitutes</string>
    <string name="favorite">Favorite</string>
    <string name="empty">-</string>

    <string name="default_date">Minggu, 04 Maret 2018</string>
    <string name="default_home_team">Sriwijaya FC</string>
    <string name="default_score">0</string>
    <string name="default_away_team">Bali United</string>
    <string name="default_team_badge">Team Badge</string>

    <string name="default_player_badge">Player Badge</string>
    <string name="default_player_name">Aaron Ramsey</string>
    <string name="default_player_weight">60</string>
    <string name="default_player_height">1.7</string>
    <string name="default_player_position">Centre</string>
    <string name="default_player_description">Born 26 December 1990</string>

    <string name="title_search">Search</string>

    <string name="label_nav_match">Matches</string>
    <string name="label_nav_team">Teams</string>
    <string name="label_player_weight">Weight</string>
    <string name="label_player_height">Height</string>
</resources>
